# IkomiaCore

./: .gitignore  CMakeLists.txt  Common.cmake  IkomiaCore.pri  IkomiaCoreConfig.cmake.in  IkomiaPluginsCpp.pri  LocalSettingsTemplate.cmake  LocalSettingsTemplate.pri  Versions.cmake  macros.pri
Core/: CMakeLists.txt  Core.pro
Core/Data/: CDataConversion.h  CDataInfo.cpp  CDataInfo.h  CDataVideoInfo.cpp  CDataVideoInfo.h  CMeasure.cpp  CMeasure.h  CvMatNumpyArrayConverter.cpp  CvMatNumpyArrayConverter.h
Core/Graphics/: CGraphicsComplexPolygon.cpp  CGraphicsComplexPolygon.h  CGraphicsContext.h  CGraphicsConversion.cpp  CGraphicsConversion.h  CGraphicsEllipse.cpp  CGraphicsEllipse.h  CGraphicsItem.hpp  CGraphicsJSON.cpp  CGraphicsJSON.h  CGraphicsPoint.cpp  CGraphicsPoint.h  CGraphicsPolygon.cpp  CGraphicsPolygon.h  CGraphicsPolyline.cpp  CGraphicsPolyline.h  CGraphicsRectangle.cpp  CGraphicsRectangle.h  CGraphicsRegistration.cpp  CGraphicsRegistration.h  CGraphicsText.cpp  CGraphicsText.h  CPoint.hpp  GraphicsProperty.cpp  GraphicsProperty.h
Core/Main/: CoreDefine.hpp  CoreTools.hpp
Core/Translations/: core_fr.qm  core_fr.ts
Core/Workflow/: CWorkflowOutput.cpp  CWorkflowOutput.h  CWorkflowParam.cpp  CWorkflowParam.h  CWorkflowTask.cpp  CWorkflowTask.h  CWorkflowTaskIO.cpp  CWorkflowTaskIO.h  CWorkflowTaskParam.cpp  CWorkflowTaskParam.h  CWorkflowTaskWidget.cpp  CWorkflowTaskWidget.h
DataIO/: CDataIO.hpp  CDataImageIO.cpp  CDataVideoBuffer.cpp  CDataVideoBuffer.h  CDataVideoIO.cpp  CDataVideoIO.h  CDicomImageIO.cpp  CMakeLists.txt  CNumpyImageIO.cpp  COpencvImageIO.cpp  COpencvVideoIO.cpp  COpencvVideoIO.h  CVirtualVideoIO.cpp  CVirtualVideoIO.h  DataIO.pro
DataManagement/: CImageDataManager.cpp  CMakeLists.txt  CVideoDataManager.cpp  CVideoDataManager.h  DataManagement.pro
DataPlot/: CCurvePlot.cpp  CDataPlot.cpp  CHistogramPlot.cpp  CMakeLists.txt  CMultiBarPlot.cpp  CPieMarker.cpp  CPieMarker.h  CPiePlot.cpp  CPiePlot.h  CPlot.cpp  CPlot.h  CSimpleBarPlot.cpp  DataPlot.pro
DataProcess/: CMakeLists.txt  CProcessRegistration.cpp  DataProcess.hpp  DataProcess.pro  DataProcessTools.hpp  pch.hpp
DataProcess/Core/: C2dImageTask.cpp  C2dImageTask.h  CClassificationTask.cpp  CClassificationTask.h  CDnnTrainTask.h  CHardwareConfig.cpp  CHardwareConfig.h  CIkomiaRegistry.cpp  CIkomiaRegistry.h  CMlflowTrainTask.cpp  CMlflowTrainTask.h  CObjectDetectionTask.cpp  CObjectDetectionTask.h  CPluginProcessInterface.hpp  CPluginTools.cpp  CPluginTools.h  CProcessRegistration.cpp  CProcessRegistration.h  CRunTaskManager.cpp  CRunTaskManager.h  CTaskFactory.hpp  CTaskInfo.cpp  CTaskInfo.h  CTaskParamFactory.hpp  CTaskRegistration.cpp  CTaskRegistration.h  CWidgetFactory.hpp  CWorkflow.cpp  CWorkflow.h
DataProcess/IO/: CArrayIO.cpp  CArrayIO.h  CBlobMeasureIO.cpp  CBlobMeasureIO.h  CConvertIO.cpp  CConvertIO.h  CDatasetIO.cpp  CDatasetIO.h  CGraphicsInput.cpp  CGraphicsInput.h  CGraphicsOutput.cpp  CGraphicsOutput.h  CImageIO.cpp  CImageIO.h  CInstanceSegIO.cpp  CInstanceSegIO.h  CJsonIO.cpp  CJsonIO.h  CKeypointsIO.cpp  CKeypointsIO.h  CNumericIO.cpp  CNumericIO.h  CObjectDetectionIO.cpp  CObjectDetectionIO.h  CPathIO.cpp  CPathIO.h  CScene3dIO.cpp  CScene3dIO.h  CSemanticSegIO.cpp  CSemanticSegIO.h  CTaskIORegistration.cpp  CTaskIORegistration.h  CTextIO.cpp  CTextIO.h  CTextStreamIO.cpp  CTextStreamIO.h  CVideoIO.cpp  CVideoIO.h  CWidgetOutput.cpp  CWidgetOutput.h
DataProcess/Task/: C2dImageInteractiveTask.cpp  C2dImageInteractiveTask.h  C2dImageTask.cpp  C2dImageTask.h  CClassificationTask.cpp  CClassificationTask.h  CDnnTrainTask.cpp  CDnnTrainTask.h  CInstanceSegTask.cpp  CInstanceSegTask.h  CKeypointDetectionTask.cpp  CKeypointDetectionTask.h  CObjectDetectionTask.cpp  CObjectDetectionTask.h  CSemanticSegTask.cpp  CSemanticSegTask.h  CTaskFactory.hpp  CTaskHardwareConfig.cpp  CTaskHardwareConfig.h  CTaskInfo.cpp  CTaskInfo.h  CVideoTask.cpp  CVideoTask.h
DataProcess/Translations/: dataprocess_fr.qm  dataprocess_fr.ts
PyCore/: CGraphicsItemWrap.cpp  CMakeLists.txt  CTaskIOFactoryWrap.cpp  CTaskIOFactoryWrap.h  CWorkflowTaskIOWrap.cpp  CWorkflowTaskIOWrap.h  CWorkflowTaskParamWrap.cpp  CWorkflowTaskParamWrap.h  CWorkflowTaskWidgetWrap.cpp  CWorkflowTaskWidgetWrap.h  CWorkflowTaskWrap.cpp  CWorkflowTaskWrap.h  IterableConverter.hpp  MapConverter.hpp  PairConverter.hpp  PyCore.cpp  PyCore.h  PyCore.pro  PyCoreDocString.hpp  VectorConverter.hpp
PyDataIO/: CMakeLists.txt  PyDataIO.cpp  PyDataIO.pro  PyDataIODocString.hpp
PyDataProcess/: C2dImageInteractiveTaskWrap.cpp  C2dImageInteractiveTaskWrap.h  CDatasetIOWrap.cpp  CDatasetIOWrap.h  CDnnTrainTaskWrap.cpp  CDnnTrainTaskWrap.h  CIkomiaRegistryWrap.cpp  CIkomiaRegistryWrap.h  CImageIOWrap.h  CInstanceSegIOWrap.h  CMakeLists.txt  CObjectDetectionIOWrap.cpp  CObjectDetectionIOWrap.h  CPluginProcessInterfaceWrap.cpp  CPluginProcessInterfaceWrap.h  CVideoIOWrap.h  CVideoOFTaskWrap.h  CVideoTaskWrap.cpp  CVideoTaskWrap.h  CVideoTrackingTaskWrap.cpp  CVideoTrackingTaskWrap.h  CWidgetFactoryWrap.cpp  CWidgetFactoryWrap.h  CWorkflowWrap.cpp  CWorkflowWrap.h  PyDataProcess.cpp  PyDataProcess.h  PyDataProcess.pro  PyDataProcessDocString.hpp  PyDataProcessGlobal.h
PyDataProcess/IO/: CArrayIOWrap.cpp  CBlobMeasureIOWrap.cpp  CBlobMeasureIOWrap.h  CDatasetIOWrap.cpp  CDatasetIOWrap.h  CGraphicsInputWrap.cpp  CGraphicsInputWrap.h  CGraphicsOutputWrap.cpp  CGraphicsOutputWrap.h  CImageIOWrap.cpp  CImageIOWrap.h  CInstanceSegIOWrap.cpp  CInstanceSegIOWrap.h  CKeyptsIOWrap.cpp  (+13 more)
PyUtils/: CMakeLists.txt  PairToPythonTupleConverter.hpp  PyUtils.cpp  PyUtils.pro  PyUtilsDocString.hpp
UnitTests/: CMakeLists.txt  UnitTests.pro
Utils/: CLogManager.cpp  CLogManager.h  CMakeLists.txt  CMemoryInfo.cpp  CNetworkManager.cpp  CNetworkManager.h  CSemanticVersion.cpp  CSemanticVersion.h  CTimer.hpp  CTreeDbManager.hpp  CWindowsDeviceEnumerator.h  ExceptionCode.hpp  Markup.h  PythonThread.hpp  UnitTestUtils.hpp  Utils.pro  UtilsDefine.hpp  UtilsTools.hpp  base64.hpp  pch.hpp
VolumeRender/: CMakeLists.txt  VolumeRender.pro  ocl.hpp
(+485 files in other folders)
